First Time In Git

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Git</title>
-	<link rel="stylesheet" href="">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Git</title>
 </head>
+
 <body>
-	<h2>Im Using Git</h2>
+    <header>Git</header>
+    <h1>First Git Project</h1>
+    <p>Lorem ipsum dolorsit amet consectetur adipisicing elit.
+       Cupiditate quidemdeleniti quis quibusdam natus laudantium
+       ipsam amet pariatur eligendi corrupti velit eius iusto impedit
+       ipsum laboriosam, nihil architecto. Voluptatem, itaque.</p>
+    <button>Subscribe</button>
+    <footer>Design By Keshav Chandrakar</footer>
 </body>
+
 </html>
